# TermoChatClient

./: Cargo.toml
src/: main.rs
src/components/: app.rs  forms.rs  logics.rs  mod.rs  states.rs
src/server_talk/: session.rs
src/tui/: core.rs
