[package]
name = "TermoChatClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
dotenv = "0.15.0"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
native-tls = "0.2.11"
litemap = "0.7.3"
zerofrom = "0.1.3"
serde_json = "1.0.140"
crossbeam-channel = "0.5.14"
http = "1.3.1"
tungstenite = "0.26.2"
